# Patient_Data

./: README.md  io_data.cpp  mainwindow.cpp
CSVData/: ShortPatientData.csv
Patient_Data_Project/: .gitignore  CMakeLists.txt  database.cpp  database.h  datensatz_anzeigen.cpp  datensatz_anzeigen.h  datensatz_anzeigen.ui  datensatz_bearbeiten.cpp  datensatz_bearbeiten.h  datensatz_bearbeiten.ui  io_data.cpp  io_data.h  io_data.hpp  io_data_BACKUP_2046.cpp  io_data_BASE_2046.cpp  io_data_LOCAL_2046.cpp  io_data_REMOTE_2046.cpp  logindialog.cpp  logindialog.h  logindialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nutzer_anlegen.cpp  nutzer_anlegen.h  nutzer_anlegen.ui  patientendaten10.csv  pictures.qrc  user.cpp  user.h
Patient_Data_Project/Doku/: Doku_Informatik_Alex_Part_st20251219_2010.docx  Doku_Informatik_Alex_Part_st20251224_1648.docx  Doku_Informatik_Alex_Part_st20251229_0235.docx  Doku_Informatik_Alex_Part_st20251229_0328.docx  Doku_Informatik_Alex_Part_st20251229_0422.docx  Doku_Jacob.docx  Doku_Johannes.docx  Doku_Justin.docx  Dokumentation_David_Vorlage_20241228_1846_blank.docx  Dokumentation_Final_Gruppe_04.docx  ~$ku_Jacob.docx  ~WRL0005.tmp
Patient_Data_Project/PatientenDaten/: PatientDataCSVshort.csv  PatientDataDatabase.db  PatientDataDatabase.db-journal
